# covar

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  out.txt
src/: aggregate.rs  bam_utils.rs  call_variants.rs  cli.rs  cluster.rs  gene.rs  lib.rs  main.rs  mutation.rs  utils.rs
src/mutation/: deletion.rs  insertion.rs  mod.rs  snp.rs
tests/data/: test.bam.bai
