[package]
name = "covar"
version = "0.3.0"
edition = "2024"
description = "Calls physically-linked mutation clusters from wastewater amplicon sequencing data"
authors = ["Dylan Pilz <dpilz@scripps.edu>"]
license = "MIT OR Apache-2.0"

[dependencies]
bio = "2.2.0"
clap = { version = "4.5.32", features = ["derive"] }
indicatif = "0.17.11"
rust-htslib = "0.49.0"
bio-seq = { version="0.14", features=["translation"] }
polars = { version = "0.46.0", features = ["lazy", "round_series"] }
crossbeam = "0.8.4"
rayon = "1.11.0"
tempfile = "3.22.0"

